# orbic-toolkit

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
src/connection/: mod.rs  telnet.rs
src/ops/: install.rs  mod.rs  persist.rs  service.rs  uninstall.rs
src/orbic/: auth.rs  exploit.rs  mod.rs  usb.rs
src/payload/: init.rs  mod.rs
